# CG2025-UMINHO

./: .gitignore  README.md
phase1/code/: CMakeLists.txt
phase1/code/include/: Box.h  Cone.h  Engine.h  Figura.h  Figure.h  Generator.h  Parser.h  Plane.h  Ponto.h  Sphere.h
phase1/code/src/: Box.cpp  Cone.cpp  Engine.cpp  Figure.cpp  Generator.cpp  Parser.cpp  Plane.cpp  Ponto.cpp  Sphere.cpp
phase1/code/utils/: world.xml
